--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,9 +2,9 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_USER = credentials('dockerhub-credentials').username
-        DOCKER_PASS = credentials('dockerhub-credentials').password
-        APP_EC2_IP = '10.0.2.55'  // Replace this!
+        DOCKER_USER = credentials('dockerhubCredentials').username
+        DOCKER_PASS = credentials('dockerhubCredentials').password
+        APP_EC2_IP = '10.0.2.55' 
     }
 
     stages {
@@ -38,16 +38,16 @@ pipeline {
 
         stage('Deploy to App EC2') {
             steps {
-                sshagent (credentials: ['jenkins-ssh-key']) {
+                sshagent (credentials: ['app-ec2-key']) {
                     sh '''
                     ssh -o StrictHostKeyChecking=no ec2-user@$APP_EC2_IP << EOF
                       docker login -u $DOCKER_USER -p $DOCKER_PASS
                       docker stop frontend || true && docker rm frontend || true
                       docker stop backend || true && docker rm backend || true
-                      docker pull $DOCKER_USER/fusion-frontend:latest
-                      docker pull $DOCKER_USER/fusion-backend:latest
-                      docker run -d --name frontend -p 80:80 $DOCKER_USER/fusion-frontend:latest
-                      docker run -d --name backend -p 5000:5000 $DOCKER_USER/fusion-backend:latest
+                      docker pull $DOCKER_USER/mern_app:frontend
+                      docker pull $DOCKER_USER/mern_app:backend
+                      docker run -d --name frontend -p 80:80 $DOCKER_USER/mern_app:frontend
+                      docker run -d --name backend -p 5000:5000 $DOCKER_USER/mern_app:backend
                     EOF
                     '''
                 }
