--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Clone Repo') {
             steps {
-                git 'https://github.com/agiratech-Mahima/Mern_app.git'
+                  git branch: 'main', url: 'https://github.com/agiratech-Mahima/Mern_app.git'
             }
         }
 
