--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
                 sshagent (credentials: ['app-ec2-key']) {
                     withCredentials([usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
                         sh '''
-                        ssh -o StrictHostKeyChecking=no ec2-user@$APP_EC2_IP << EOF
+                        ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP << EOF
                           docker login -u $DOCKER_USER -p $DOCKER_PASS
                           
                           docker stop backend || true && docker rm backend || true
