--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,25 +28,21 @@ pipeline {
 
       
 
-        stage('Deploy to App EC2') {
-            steps {
-                sshagent (credentials: ['app-ec2-key']) {
-                    withCredentials([usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                        sh '''
-                        ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP << EOF
-                          docker login -u $DOCKER_USER -p $DOCKER_PASS
-                          
-                          docker stop backend || true && docker rm backend || true
-                        
-                          docker pull $DOCKER_USER/mern_app:backend
-                      
-                          docker run -d --name backend -p 5000:5000 $DOCKER_USER/mern_app:backend
-                        EOF
-                        '''
-                    }
-                }
+       stage('Deploy to App EC2') {
+    steps {
+        sshagent (credentials: ['app-ec2-key']) {
+            withCredentials([usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                sh '''
+                ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP "docker login -u $DOCKER_USER -p $DOCKER_PASS && \
+                docker stop backend || true && docker rm backend || true && \
+                docker pull $DOCKER_USER/mern_app:backend && \
+                docker run -d --name backend -p 5000:5000 $DOCKER_USER/mern_app:backend"
+                '''
             }
         }
+    }
+}
+
     }
 
     post {
