--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,12 @@
 # Use official Node.js image
 FROM node:18-alpine
 
+# Accept build-time argument
+ARG MONGO_URI
+
+# Set environment variable for runtime
+ENV MONGO_URI=$MONGO_URI
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -11,3 +17,4 @@ COPY . .
 EXPOSE 5000
 
 CMD ["npm", "start"]
+
