--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
                 sshagent (credentials: ['app-ec2-key']) {
                     withCredentials([
                         usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
-                        string(credentialsId: 'mongoUriCredential', variable: 'MONGO_URI')
+                        string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI')
                     ]) {
                         sh '''
                         ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP "docker login -u $DOCKER_USER -p $DOCKER_PASS && \
