--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        APP_EC2_IP = '10.0.2.55'
+        APP_EC2_IP = '10.0.2.55'   // ✅ Private IP of App EC2 (inside VPC)
     }
 
     stages {
@@ -21,7 +21,7 @@ pipeline {
                     ]) {
                         sh '''
                         docker login -u $DOCKER_USER -p $DOCKER_PASS
-                        docker build --build-arg MONGO_URI=$MONGO_URI -t $DOCKER_USER/mern_app:backend .
+                        docker build -t $DOCKER_USER/mern_app:backend .
                         docker push $DOCKER_USER/mern_app:backend
                         '''
                     }
@@ -37,10 +37,12 @@ pipeline {
                         string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI')
                     ]) {
                         sh '''
-                        ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP "docker login -u $DOCKER_USER -p $DOCKER_PASS && \
-                        docker stop backend || true && docker rm backend || true && \
-                        docker pull $DOCKER_USER/mern_app:backend && \
-                        docker run -d --name backend -p 5000:5000 -e MONGO_URI=$MONGO_URI $DOCKER_USER/mern_app:backend"
+                        ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP << 'ENDSSH'
+                        docker login -u $DOCKER_USER -p $DOCKER_PASS
+                        docker stop backend || true && docker rm backend || true
+                        docker pull $DOCKER_USER/mern_app:backend
+                        docker run -d --name backend -p 5000:5000 -e MONGO_URI=$MONGO_URI $DOCKER_USER/mern_app:backend
+                        ENDSSH
                         '''
                     }
                 }
