--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -29,25 +29,27 @@ pipeline {
             }
         }
 
-        stage('Deploy to App EC2') {
-            steps {
-                sshagent (credentials: ['app-ec2-key']) {
-                    withCredentials([
-                        usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
-                        string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI')
-                    ]) {
-                        sh '''
-                        ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP << 'ENDSSH'
-                        docker login -u $DOCKER_USER -p $DOCKER_PASS
-                        docker stop backend || true && docker rm backend || true
-                        docker pull $DOCKER_USER/mern_app:backend
-                        docker run -d --name backend -p 5000:5000 -e MONGO_URI=$MONGO_URI $DOCKER_USER/mern_app:backend
-                        ENDSSH
-                        '''
-                    }
-                }
+      stage('Deploy to App EC2') {
+    steps {
+        sshagent (credentials: ['app-ec2-key']) {
+            withCredentials([
+                usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
+                string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI')
+            ]) {
+                sh """
+                ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP '
+                  docker login -u $DOCKER_USER -p $DOCKER_PASS
+                  docker stop backend || true
+                  docker rm backend || true
+                  docker pull $DOCKER_USER/mern_app:backend
+                  docker run -d --name backend -p 5000:5000 -e MONGO_URI=\"$MONGO_URI\" $DOCKER_USER/mern_app:backend
+                '
+                """
             }
         }
+    }
+}
+
     }
 
     post {
