--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
             }
         }
 
-      stage('Deploy to App EC2') {
+     stage('Deploy to App EC2') {
     steps {
         sshagent (credentials: ['app-ec2-key']) {
             withCredentials([
@@ -42,13 +42,14 @@ pipeline {
                   docker stop backend || true
                   docker rm backend || true
                   docker pull $DOCKER_USER/mern_app:backend
-                  docker run -d --name backend -p 5000:5000 -e MONGO_URI=\"$MONGO_URI\" $DOCKER_USER/mern_app:backend
+                  docker run -d --name backend --network host -e MONGO_URI="$MONGO_URI" $DOCKER_USER/mern_app:backend
                 '
                 """
             }
         }
     }
 }
+
 
     }
 
