--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,19 @@
-# Use official Node.js Alpine image
+# Use official Node.js image
 FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy dependencies and install
 COPY package*.json ./
 RUN npm install
 
-# Copy rest of the app
 COPY . .
+
+# Accept runtime environment variable
+ENV MONGO_URI=""
 
 EXPOSE 5000
 
-# Start the app
 CMD ["npm", "start"]
+
 
 
