--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
                 dir('backend') {
                     withCredentials([
                         usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
-                        string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI')
+                        string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI'),
                          string(credentialsId: 'JWT_SECRET', variable: 'JWT_SECRET') 
                     ]) {
                         sh '''
