--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -58,15 +58,12 @@ pipeline {
 
     }
 post {
-    success {
-        mail to: 'mahimakumari416@gmail.com',
-             subject: "Build SUCCESS: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
-             body: "Check the build: ${env.BUILD_URL}"
-    }
-    failure {
-        mail to: 'mahimakumari416@gmail.com',
-             subject: "Build FAILED: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
-             body: "Something went wrong. Check logs: ${env.BUILD_URL}"
-    }
+  success {
+    echo '✅ Build Succeeded!'
+  }
+  failure {
+    echo '❌ Build Failed!'
+  }
 }
+
 }
