--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        APP_EC2_IP = '10.0.2.55'   // Private IP 
+        APP_EC2_IP = '10.0.2.55' // private EC2 IP
     }
 
     stages {
@@ -18,7 +18,7 @@ pipeline {
                     withCredentials([
                         usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
                         string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI'),
-                         string(credentialsId: 'JWT_SECRET', variable: 'JWT_SECRET') 
+                        string(credentialsId: 'JWT_SECRET', variable: 'JWT_SECRET')
                     ]) {
                         sh '''
                         docker login -u $DOCKER_USER -p $DOCKER_PASS
@@ -30,40 +30,40 @@ pipeline {
             }
         }
 
-     stage('Deploy to App EC2') {
-  steps {
-    sshagent (credentials: ['app-ec2-key']) {
-      withCredentials([
-        usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
-        string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI')
-      ]) {
-        sh """
-          ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP '
-            docker login -u $DOCKER_USER -p $DOCKER_PASS &&
-            docker stop backend || true &&
-            docker rm backend || true &&
-            docker pull $DOCKER_USER/mern_app:backend &&
-            docker run -d --name backend \
-              --network host \
-              -e MONGO_URI="$MONGO_URI" \
-              $DOCKER_USER/mern_app:backend
-          '
-        """
-      }
+        stage('Deploy to App EC2') {
+            steps {
+                sshagent (credentials: ['app-ec2-key']) {
+                    withCredentials([
+                        usernamePassword(credentialsId: 'dockerhubCredentials', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS'),
+                        string(credentialsId: 'MONGO_URI', variable: 'MONGO_URI'),
+                        string(credentialsId: 'JWT_SECRET', variable: 'JWT_SECRET')
+                    ]) {
+                        sh """
+                        ssh -o StrictHostKeyChecking=no ubuntu@$APP_EC2_IP '
+                            docker login -u $DOCKER_USER -p $DOCKER_PASS &&
+                            docker stop backend || true &&
+                            docker rm backend || true &&
+                            docker pull $DOCKER_USER/mern_app:backend &&
+                            docker run -d --name backend \\
+                              --network host \\
+                              -e MONGO_URI="$MONGO_URI" \\
+                              -e JWT_SECRET="$JWT_SECRET" \\
+                              $DOCKER_USER/mern_app:backend
+                        '
+                        """
+                    }
+                }
+            }
+        }
     }
-  }
-}
 
-
-
+    post {
+        success {
+            echo 'Build and Deployment Successful!'
+        }
+        failure {
+            echo 'Build or Deployment Failed!'
+        }
     }
-post {
-  success {
-    echo '✅ Build Succeeded!'
-  }
-  failure {
-    echo '❌ Build Failed!'
-  }
 }
 
-}
